--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -26,13 +26,13 @@
     <h3> <a id="dlm_easy"> Easy </a> </h3>
 
     <p e-ignore>
-        To use this delimiter just do the following: <span class="note"> -e- [Content] - </span>
+        To use this delimiter just do the following: <span class="note"> <span class="mark-el">-e-</span> [Content] <span class="mark-el">-</span> </span>
     </p>
 
     <h3> <a id="dlm_easy"> Common </a> </h3>
 
     <p e-ignore>
-        To use this delimiter just do the following: <span class="note"> {{ [Content] }} </span>
+        To use this delimiter just do the following: <span class="note"> <span class="mark-el">{{</span> [Content] <span class="mark-el">}}</span> </span>
     </p>
 
     <p>
