--- a/docs/components/doc-sections/section.1.html
+++ b/docs/components/doc-sections/section.1.html
@@ -18,7 +18,7 @@
     <div class="keep-reading">
         <div class="left"></div>
         <div class="right">
-            <a href="docs.html?load=sct2">
+            <a href="docs.html?load=sctn2">
                 <h3 class="text"> Commands </h3> <h3 class="center-icon fa fa-angle-right"></h3>
             </a>
         </div>
