--- a/docs/components/top.html
+++ b/docs/components/top.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <ul e-class="{ 'top-menu-opened': menuOpened }">
-            <li> <a :href="/tutorial"> Tutorial </a> </li>
+            <li> <a class="tutorial-anchor" :href="/tutorial/introduction"> Tutorial </a> </li>
             <li> <a href="docs.html"> Docs </a> </li>
             <li> <a href="docs.connectors.html"> Connectors </a> </li>
             <li class="hide-it"> <span class="text"> Translations </span> <span class="fa fa-dot-circle-o dot"></span>
