--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -18,9 +18,10 @@
         <a class="button-like" download href="{{ app.url }}"> Download </a>
     </p>
 
-    <pre><code class="html hljs">
-&lt;script src="js/easy.js"&gt;&lt;/script&gt;
-    </code></pre>
+    <div class="code-container" code-ext=".html">
+        <textarea cm-lang="text/html">
+    <script src="js/easy.js"></script></textarea>
+    </div>
 
     <p> Or, you can use... </p>
 
@@ -31,9 +32,10 @@
         is a little bit simpler because the only thing that must be done is to import it
     </p>
 
-    <pre><code class="html hljs">
- &lt;script src="{{ app.cdn }}"&gt;&lt;/script&gt;
-    </code></pre>
+    <div class="code-container" code-ext=".html">
+        <textarea cm-lang="text/html">
+    <script src="{{ app.cdn }}"></script></textarea>
+    </div>
 
 </section>
 <script>
